# jcalapi

./: .envrc-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devenv.nix  docker-run.sh  flake.nix  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yaml  lint.yaml  release.yaml
jcalapi/: __init__.py  app.py  events.py  gcal_import.py
jcalapi/backend/: confluence.py  exchange.py  google.py
nix/: module-common.nix  module-hm.nix  module.nix
src/jcalapi/: __init__.py  app.py  events.py  utils.py
src/jcalapi/backend/: __init__.py  confluence.py  google.py
