[tool.poetry]
name = "jcalapi"
version = "0.1.5"
description = "Local calendar caching and JSON API"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/pschmitt/jcalapi"

[tool.poetry.dependencies]
python = "^3.10"
asynccli = "^0.1.3"
atlassian-python-api = "^3.38.0"
diskcache = "^5.6.1"
environs = ">=9.5,<11.0"
fastapi = ">=0.96,<0.110"
fastapi-utils = "^0.2.1"
httpx = ">=0.24.1,<0.27.0"
icalendar = "^5.0.7"
loguru = "^0.7.0"
python-dateutil = "^2.8.2"
recurring-ical-events = "^2.0.2"
uvicorn = {extras = ["standard"], version = ">=0.22,<0.28"}
xdg = "^6.0.0"
exchangelib = "^5.0.3"
beautifulsoup4 = "^4.12.2"
python-multipart = ">=0.0.6,<0.0.8"

[tool.poetry.dev-dependencies]
black = "^24.1"
flake8 = "^7.0.0"
ipython = "^8.21.0"
isort = "^5.13.2"

[tool.poetry.scripts]
jcalapi = 'jcalapi.run:main'

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
